syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Dee-Dee-Tiger-Hacks/Backend-Server/pb";

message User {
    string id = 1;
    string username = 2;
    string full_name = 3;
    string email = 4;
    string linkedin_url = 5;
    string phone = 6;
    string avatar_url = 7;
    string job_title = 8;
    google.protobuf.Timestamp password_changed_at = 9;
    google.protobuf.Timestamp created_at = 10;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

// Create User
message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

// Update User
message UpdateUserRequest {
    string user_id = 1;
    optional string full_name = 2;
    optional string email = 3;
    optional string password = 4;
    optional string linkedin_url = 5;
    optional string phone = 6;
    optional string avatar_url = 7;
    optional string job_title = 8;
}

message UpdateUserResponse {
    User user = 1;
}

// Login User
message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    string session_id = 1;
    string access_token = 2;
    google.protobuf.Timestamp access_token_expires_at = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp refresh_token_expires_at = 5;
    User user = 6;
}